deploy/manifests/prod/us-east-2/tenant/storetheindex/heyfil/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heyfil
spec:
  template:
    spec:
      containers:
        - name: heyfil
          resources:
            limits:
              cpu: "2"
              memory: 2Gi
            requests:
              cpu: "2"
              memory: 2Gi
