deploy/manifests/prod/us-east-2/tenant/storetheindex/heyfil/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heyfil
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
    - hosts:
        - heyfil.cid.contact
      secretName: heyfil-ingress-tls
  rules:
    - host: heyfil.cid.contact
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heyfil
                port:
                  name: api
